<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, scheduleActivity!</string>
    <string name="app_name">StirTrek</string>
    <string name="left_view_pager_button">Left View Pager Button</string>
    <string name="right_view_pager_button">Right View Pager Button</string>
    <string name="no_session_selected">No Session Selected</string>
    <string name="photo">Photo</string>
    <string name="twitter_feed">Twitter</string>
    <string name="speakers">Speakers</string>
    <string name="my_schedule">Favorites</string>
    <string name="stir_trek_schedule">Schedule</string>
    <string name="about">About</string>
    <string name="about_text">Stir Trek is a one-day conference focused on teaching software developers the latest and greatest in technologies, techniques, and tools. The full day of content is always concluded with a private screening of a blockbuster film on its opening day.\n\nStir Trek Conference, Inc. is an Ohio nonprofit corporation and is pursuing tax exempt recognition from the IRS as a 501©6 Business League.\n\nhttp://stirtrek.com\n\nThis app was created by \@JoshuaKaminsky</string>
    <string name="_no_session_selected_">** No Session Selected **</string>
    <string name="remove_session">Remove Session</string>
    <string name="remove_icon">Remove Icon</string>
    <string name="speakers_">"speakers: "</string>
    <string name="details">details</string>
    <string name="details_image">Details Image</string>
    <string name="twitter_refresh_icon">Twitter Refresh Icon</string>
    <string name="stir_trek_icon">Stir Trek Icon</string>
    <string name="stir_trek_session">Session</string>    
    <string name="stir_trek_speaker">Speaker</string>
    <string name="splash_text">Winter Soldier Edition</string>
    <string name="splash_date">April 4th, 2014</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
</resources>
