<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash" >

    
    <ProgressBar android:id="@+id/splash_busy"
        	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_alignParentBottom="true"
        	android:layout_centerHorizontal="true"
        	android:paddingBottom="10dp"
        	android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/stir_trek_icon"
        android:src="@drawable/stirtrek_splash" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:background="@color/frost"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/splash_text"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/splash_date"
            android:textColor="@color/red"
            android:textSize="17sp" />
    </LinearLayout>
    
</RelativeLayout>