<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_frost"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/stir_trek_icon"
            android:onClick="goBack"
            android:src="@drawable/back" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/stir_trek_icon"
            android:onClick="goBack"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingRight="60dp"
            android:text="@string/stir_trek_speaker"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_margin="2dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/speaker_details_picture"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@color/frost"
            android:contentDescription="@string/photo"
            android:padding="7dp" />

        <TextView
            android:id="@+id/speaker_details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/frost"
            android:gravity="center"
            android:padding="7dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linearLayout2"
        android:fillViewport="true" >

        <TextView
            android:id="@+id/speaker_details_bio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </ScrollView>

</RelativeLayout>